# sql_error_taxonomy

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
docs/: conf.py  index.rst
src/sql_error_taxonomy/: __init__.py  sql_errors.py
